--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>First Potfolio</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway+Dots&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
 </head>
-<body>
-	 <header>
-
+<body class="open-sans-normal">
+	 <header >
+           <nav>
+			<h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+			<ul >
+				<li><a  class="dark-2">Portfolio</a></li>
+				<li><a class="dark-2" href="">Blog</a></li>
+				<li><a class="dark-2"><button class="btn-primary">Hire me</button></a></li>
+			</ul>
+		   </nav>
+		   <div class="bannar">
+			<div class="bannar-content dark-2">
+               <h4 class="banner-greetings">Hi I am</h4>
+			   <h1 class="bannar-title">Mary Hardy</h1>
+			   <p class="bannar-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+			   <button class="btn-primary">Download CV</button>
+			   <button class="btn-primary">Contact</button>
+			</div>
+			<img class="bannarprofile" src="images/hardy.png" alt="">
+		   </div>
 	 </header>
 
 	 <main>
@@ -15,7 +36,7 @@
 	 </main>
 
 	 <footer>
-		
+
 	 </footer>
 </body>
 </html>
