--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body class="open-sans-normal">
-	 <header >
+	 <header class="header secondary-bg" >
            <nav>
 			<h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
 			<ul >
@@ -30,9 +30,30 @@
 			<img class="bannarprofile" src="images/hardy.png" alt="">
 		   </div>
 	 </header>
-
+          
 	 <main>
-
+           <section class="about secondary-bg">
+                   <h3 class="section-title">About me</h3>
+				   <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+				   <div class="about-items">
+					<div class="about-item">
+						<p class="item-title">name</p>
+						<p class="item-description">Mary Hardy</p>
+					</div>
+					<div class="about-item">
+						<p class="item-title">Email</p>
+						<p class="item-description">abc@.com</p>
+					</div>
+					<div class="about-item">
+						<p class="item-title">Bate of bath</p>
+						<p class="item-description">dec,2002</p>
+					</div>
+					<div class="about-item">
+						<p class="item-title">From</p>
+						<p class="item-description">Dhaka BD</p>
+					</div>
+				   </div>
+		  </section>
 	 </main>
 
 	 <footer>
